Update install to include info about configuration file
Signed-off-by: Aki Saarinen <aki@akisaarinen.fi>

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-cp example_config.yml config.yml
-vim config.yml
-./lullizio.sh
+cp example_config.yml myconfig.yml
+vim myconfig.yml
+./lullizio.sh myconfig.yml
 
